// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NavigationBar > should match snapshot as authenticated 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <header
        class="flex justify-between px-4 py-2 bg-primary border-b border-primary-lighter top-0 sticky z-10"
      >
        <div
          class="flex items-center gap-4"
        >
          <img
            alt="Rigtch"
            class="rounded-lg hidden lg:block"
            data-nimg="1"
            decoding="async"
            height="42"
            loading="lazy"
            src="/_next/image?url=%2Frigtch-icon.png&w=96&q=75"
            srcset="/_next/image?url=%2Frigtch-icon.png&w=48&q=75 1x, /_next/image?url=%2Frigtch-icon.png&w=96&q=75 2x"
            style="color: transparent;"
            width="42"
          />
          <div
            class="lg:hidden w-[28px] h-[28px]"
          >
            <button
              aria-controls="radix-:r4:"
              aria-expanded="false"
              aria-haspopup="dialog"
              class="cursor-pointer"
              data-state="closed"
              type="button"
            >
              <svg
                fill="none"
                height="28"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 15 15"
                width="28"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M1.5 3C1.22386 3 1 3.22386 1 3.5C1 3.77614 1.22386 4 1.5 4H13.5C13.7761 4 14 3.77614 14 3.5C14 3.22386 13.7761 3 13.5 3H1.5ZM1 7.5C1 7.22386 1.22386 7 1.5 7H13.5C13.7761 7 14 7.22386 14 7.5C14 7.77614 13.7761 8 13.5 8H1.5C1.22386 8 1 7.77614 1 7.5ZM1 11.5C1 11.2239 1.22386 11 1.5 11H13.5C13.7761 11 14 11.2239 14 11.5C14 11.7761 13.7761 12 13.5 12H1.5C1.22386 12 1 11.7761 1 11.5Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
          <h1
            class="text-2xl md:text-3xl md:block hidden font-semibold"
          >
            rigtch.fm
          </h1>
        </div>
        <nav
          aria-label="Main"
          class="relative z-10 flex max-w-max flex-1 items-center justify-center w-full"
          data-orientation="horizontal"
          dir="ltr"
        >
          <div
            style="position: relative;"
          >
            <ul
              class="group flex flex-1 list-none items-center justify-center space-x-1"
              data-orientation="horizontal"
              dir="ltr"
            >
              <li>
                <button
                  aria-controls="radix-:r7:-content-radix-:r8:"
                  aria-expanded="false"
                  class="group h-9 w-max items-center justify-center rounded-md bg-primary text-sm font-medium transition-colors hover:bg-primary-lighter hover:text-primary-foreground focus:bg-primary-lighter focus:text-primary-foreground focus:outline-none disabled:pointer-events-none disabled:opacity-50 data-[active]:bg-backgrprimaryound-lighter/50 data-[state=open]:bg-primary-lighter/50 group flex gap-2 p-2 min-w-[100px]"
                  data-radix-collection-item=""
                  data-state="closed"
                  id="radix-:r7:-trigger-radix-:r8:"
                >
                  <p
                    class="text-lg truncate max-w-[150px]"
                  >
                    John Doe
                  </p>
                   
                  <svg
                    aria-hidden="true"
                    class="relative top-[1px] ml-1 h-3 w-3 transition duration-300 group-data-[state=open]:rotate-180"
                    fill="none"
                    height="15"
                    viewBox="0 0 15 15"
                    width="15"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M3.13523 6.15803C3.3241 5.95657 3.64052 5.94637 3.84197 6.13523L7.5 9.56464L11.158 6.13523C11.3595 5.94637 11.6759 5.95657 11.8648 6.15803C12.0536 6.35949 12.0434 6.67591 11.842 6.86477L7.84197 10.6148C7.64964 10.7951 7.35036 10.7951 7.15803 10.6148L3.15803 6.86477C2.95657 6.67591 2.94637 6.35949 3.13523 6.15803Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
              </li>
              <a
                href="/profile/123456789"
              >
                <span>
                  <span
                    class="flex bg-primary rounded-full w-[48px] h-[48px]"
                  >
                    <span
                      class="w-full h-full flex items-center justify-center text-primary-foreground text-xl"
                    >
                      J
                    </span>
                  </span>
                </span>
              </a>
            </ul>
          </div>
          <div
            class="absolute left-0 top-full flex justify-center"
          />
        </nav>
      </header>
    </div>
  </body>,
  "container": <div>
    <header
      class="flex justify-between px-4 py-2 bg-primary border-b border-primary-lighter top-0 sticky z-10"
    >
      <div
        class="flex items-center gap-4"
      >
        <img
          alt="Rigtch"
          class="rounded-lg hidden lg:block"
          data-nimg="1"
          decoding="async"
          height="42"
          loading="lazy"
          src="/_next/image?url=%2Frigtch-icon.png&w=96&q=75"
          srcset="/_next/image?url=%2Frigtch-icon.png&w=48&q=75 1x, /_next/image?url=%2Frigtch-icon.png&w=96&q=75 2x"
          style="color: transparent;"
          width="42"
        />
        <div
          class="lg:hidden w-[28px] h-[28px]"
        >
          <button
            aria-controls="radix-:r4:"
            aria-expanded="false"
            aria-haspopup="dialog"
            class="cursor-pointer"
            data-state="closed"
            type="button"
          >
            <svg
              fill="none"
              height="28"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 15 15"
              width="28"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M1.5 3C1.22386 3 1 3.22386 1 3.5C1 3.77614 1.22386 4 1.5 4H13.5C13.7761 4 14 3.77614 14 3.5C14 3.22386 13.7761 3 13.5 3H1.5ZM1 7.5C1 7.22386 1.22386 7 1.5 7H13.5C13.7761 7 14 7.22386 14 7.5C14 7.77614 13.7761 8 13.5 8H1.5C1.22386 8 1 7.77614 1 7.5ZM1 11.5C1 11.2239 1.22386 11 1.5 11H13.5C13.7761 11 14 11.2239 14 11.5C14 11.7761 13.7761 12 13.5 12H1.5C1.22386 12 1 11.7761 1 11.5Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
        <h1
          class="text-2xl md:text-3xl md:block hidden font-semibold"
        >
          rigtch.fm
        </h1>
      </div>
      <nav
        aria-label="Main"
        class="relative z-10 flex max-w-max flex-1 items-center justify-center w-full"
        data-orientation="horizontal"
        dir="ltr"
      >
        <div
          style="position: relative;"
        >
          <ul
            class="group flex flex-1 list-none items-center justify-center space-x-1"
            data-orientation="horizontal"
            dir="ltr"
          >
            <li>
              <button
                aria-controls="radix-:r7:-content-radix-:r8:"
                aria-expanded="false"
                class="group h-9 w-max items-center justify-center rounded-md bg-primary text-sm font-medium transition-colors hover:bg-primary-lighter hover:text-primary-foreground focus:bg-primary-lighter focus:text-primary-foreground focus:outline-none disabled:pointer-events-none disabled:opacity-50 data-[active]:bg-backgrprimaryound-lighter/50 data-[state=open]:bg-primary-lighter/50 group flex gap-2 p-2 min-w-[100px]"
                data-radix-collection-item=""
                data-state="closed"
                id="radix-:r7:-trigger-radix-:r8:"
              >
                <p
                  class="text-lg truncate max-w-[150px]"
                >
                  John Doe
                </p>
                 
                <svg
                  aria-hidden="true"
                  class="relative top-[1px] ml-1 h-3 w-3 transition duration-300 group-data-[state=open]:rotate-180"
                  fill="none"
                  height="15"
                  viewBox="0 0 15 15"
                  width="15"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M3.13523 6.15803C3.3241 5.95657 3.64052 5.94637 3.84197 6.13523L7.5 9.56464L11.158 6.13523C11.3595 5.94637 11.6759 5.95657 11.8648 6.15803C12.0536 6.35949 12.0434 6.67591 11.842 6.86477L7.84197 10.6148C7.64964 10.7951 7.35036 10.7951 7.15803 10.6148L3.15803 6.86477C2.95657 6.67591 2.94637 6.35949 3.13523 6.15803Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </li>
            <a
              href="/profile/123456789"
            >
              <span>
                <span
                  class="flex bg-primary rounded-full w-[48px] h-[48px]"
                >
                  <span
                    class="w-full h-full flex items-center justify-center text-primary-foreground text-xl"
                  >
                    J
                  </span>
                </span>
              </span>
            </a>
          </ul>
        </div>
        <div
          class="absolute left-0 top-full flex justify-center"
        />
      </nav>
    </header>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`NavigationBar > should match snapshot as unauthenticated 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <header
        class="flex justify-between px-4 py-2 bg-primary border-b border-primary-lighter top-0 sticky z-10"
      >
        <div
          class="flex items-center gap-4"
        >
          <img
            alt="Rigtch"
            class="rounded-lg hidden lg:block"
            data-nimg="1"
            decoding="async"
            height="42"
            loading="lazy"
            src="/_next/image?url=%2Frigtch-icon.png&w=96&q=75"
            srcset="/_next/image?url=%2Frigtch-icon.png&w=48&q=75 1x, /_next/image?url=%2Frigtch-icon.png&w=96&q=75 2x"
            style="color: transparent;"
            width="42"
          />
          <div
            class="lg:hidden w-[28px] h-[28px]"
          >
            <button
              aria-controls="radix-:r0:"
              aria-expanded="false"
              aria-haspopup="dialog"
              class="cursor-pointer"
              data-state="closed"
              type="button"
            >
              <svg
                fill="none"
                height="28"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 15 15"
                width="28"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M1.5 3C1.22386 3 1 3.22386 1 3.5C1 3.77614 1.22386 4 1.5 4H13.5C13.7761 4 14 3.77614 14 3.5C14 3.22386 13.7761 3 13.5 3H1.5ZM1 7.5C1 7.22386 1.22386 7 1.5 7H13.5C13.7761 7 14 7.22386 14 7.5C14 7.77614 13.7761 8 13.5 8H1.5C1.22386 8 1 7.77614 1 7.5ZM1 11.5C1 11.2239 1.22386 11 1.5 11H13.5C13.7761 11 14 11.2239 14 11.5C14 11.7761 13.7761 12 13.5 12H1.5C1.22386 12 1 11.7761 1 11.5Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
          <h1
            class="text-2xl md:text-3xl md:block hidden font-semibold"
          >
            rigtch.fm
          </h1>
        </div>
        <nav
          aria-label="Main"
          class="relative z-10 flex max-w-max flex-1 items-center justify-center w-full"
          data-orientation="horizontal"
          dir="ltr"
        >
          <div
            style="position: relative;"
          >
            <ul
              class="group flex flex-1 list-none items-center justify-center space-x-1"
              data-orientation="horizontal"
              dir="ltr"
            >
              <form>
                <button
                  class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 cursor-pointer bg-success text-white shadow-sm hover:bg-success/90 h-9 px-4 py-2"
                  type="submit"
                >
                  Connect
                </button>
              </form>
            </ul>
          </div>
          <div
            class="absolute left-0 top-full flex justify-center"
          />
        </nav>
      </header>
    </div>
  </body>,
  "container": <div>
    <header
      class="flex justify-between px-4 py-2 bg-primary border-b border-primary-lighter top-0 sticky z-10"
    >
      <div
        class="flex items-center gap-4"
      >
        <img
          alt="Rigtch"
          class="rounded-lg hidden lg:block"
          data-nimg="1"
          decoding="async"
          height="42"
          loading="lazy"
          src="/_next/image?url=%2Frigtch-icon.png&w=96&q=75"
          srcset="/_next/image?url=%2Frigtch-icon.png&w=48&q=75 1x, /_next/image?url=%2Frigtch-icon.png&w=96&q=75 2x"
          style="color: transparent;"
          width="42"
        />
        <div
          class="lg:hidden w-[28px] h-[28px]"
        >
          <button
            aria-controls="radix-:r0:"
            aria-expanded="false"
            aria-haspopup="dialog"
            class="cursor-pointer"
            data-state="closed"
            type="button"
          >
            <svg
              fill="none"
              height="28"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 15 15"
              width="28"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M1.5 3C1.22386 3 1 3.22386 1 3.5C1 3.77614 1.22386 4 1.5 4H13.5C13.7761 4 14 3.77614 14 3.5C14 3.22386 13.7761 3 13.5 3H1.5ZM1 7.5C1 7.22386 1.22386 7 1.5 7H13.5C13.7761 7 14 7.22386 14 7.5C14 7.77614 13.7761 8 13.5 8H1.5C1.22386 8 1 7.77614 1 7.5ZM1 11.5C1 11.2239 1.22386 11 1.5 11H13.5C13.7761 11 14 11.2239 14 11.5C14 11.7761 13.7761 12 13.5 12H1.5C1.22386 12 1 11.7761 1 11.5Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
        <h1
          class="text-2xl md:text-3xl md:block hidden font-semibold"
        >
          rigtch.fm
        </h1>
      </div>
      <nav
        aria-label="Main"
        class="relative z-10 flex max-w-max flex-1 items-center justify-center w-full"
        data-orientation="horizontal"
        dir="ltr"
      >
        <div
          style="position: relative;"
        >
          <ul
            class="group flex flex-1 list-none items-center justify-center space-x-1"
            data-orientation="horizontal"
            dir="ltr"
          >
            <form>
              <button
                class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 cursor-pointer bg-success text-white shadow-sm hover:bg-success/90 h-9 px-4 py-2"
                type="submit"
              >
                Connect
              </button>
            </form>
          </ul>
        </div>
        <div
          class="absolute left-0 top-full flex justify-center"
        />
      </nav>
    </header>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
